eks/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  tls:
    - hosts:
      - mytest.yogveda.live
      secretName: nginx-app-tls

  rules:
    - host: mytest.yogveda.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank
                port:
                  number: 8080
